@@ -39,6 +39,36 @@ if (!defined('MEDIAWIKI')) {
 	public function __construct($query, $moduleName) {
 		parent :: __construct($query, $moduleName, 'us');
 	}
+	
+	/**
+	 * Get an array mapping token names to their handler functions.
+	 * The prototype for a token function is func($user)
+	 * it should return a token or false (permission denied)
+	 * @return array(tokenname => function)
+	 */
+	protected function getTokenFunctions() {
+		// Don't call the hooks twice
+		if(isset($this->tokenFunctions))
+			return $this->tokenFunctions;
+
+		// If we're in JSON callback mode, no tokens can be obtained
+		if(!is_null($this->getMain()->getRequest()->getVal('callback')))
+			return array();
+
+		$this->tokenFunctions = array(
+			'userrights' => array( 'ApiQueryUsers', 'getUserrightsToken' ),
+		);
+		wfRunHooks('APIQueryUsersTokens', array(&$this->tokenFunctions));
+		return $this->tokenFunctions;
+	}
+	
+	public static function getUserrightsToken($user)
+	{
+		global $wgUser;
+		// Since the permissions check for userrights is non-trivial,
+		// don't bother with it here
+		return $wgUser->editToken($user->getName());
+	}
 
 	public function execute() {
 		$params = $this->extractRequestParams();
@@ -115,6 +145,18 @@ if (!defined('MEDIAWIKI')) {
 				}
 				if(isset($this->prop['emailable']) && $user->canReceiveEmail())
 					$data[$name]['emailable'] = '';
+				if(!is_null($params['token']))
+				{
+					$tokenFunctions = $this->getTokenFunctions();
+					foreach($params['token'] as $t)
+					{
+						$val = call_user_func($tokenFunctions[$t], $user);
+						if($val === false)
+							$this->setWarning("Action '$t' is not allowed for the current user");
+						else
+							$data[$name][$t . 'token'] = $val;
+					}
+				}
 			}
 		}
 		// Second pass: add result data to $retval
@@ -153,7 +195,11 @@ if (!defined('MEDIAWIKI')) {
 			),
 			'users' => array(
 				ApiBase :: PARAM_ISMULTI => true
-			)
+			),
+			'token' => array(
+				ApiBase :: PARAM_TYPE => array_keys($this->getTokenFunctions()),
+				ApiBase :: PARAM_ISMULTI => true
+			),
 		);
 	}
 
@@ -167,7 +213,8 @@ if (!defined('MEDIAWIKI')) {
 				'  registration - adds the user\'s registration timestamp',
 				'  emailable    - tags if the user can and wants to receive e-mail through [[Special:Emailuser]]',
 			),
-			'users' => 'A list of users to obtain the same information for'
+			'users' => 'A list of users to obtain the same information for',
+			'token' => 'Which tokens to obtain for each user',
 		);
 	}
 
